--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,10 +8,14 @@
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
     "hbs": "^4.0.1",
     "mongoose": "^5.10.15",
     "morgan": "^1.9.0",
