--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "cloudinary": "^1.23.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
